--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -6,7 +6,9 @@
 
 #sendrecieve > .h2 {
   flex: 0;
+  justify-content: space-between;
 }
+
 #sendrecieve > .panel {
   flex: 1;
   overflow-y: auto;
@@ -56,7 +58,7 @@
 /* #thead {
   width: 100%;
 } */
-.input[type="number"] {
+.input {
   width: 350px;
 }
 .label {
@@ -104,4 +106,7 @@
 #Remove {
   height: 15px;
   width: 15px;
+}
+.balance {
+  margin-left: 10px;
 }
