--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -35,6 +35,7 @@
 }
 .foot {
   float: right;
+  margin-top: 20px;
 }
 .counter {
   float: right;
@@ -52,7 +53,7 @@
 } */
 
 #left-buttons {
-  padding-top: 40px;
+  padding-top: 10px;
 }
 /* #thead {
   width: 100%;
@@ -108,4 +109,24 @@
 }
 .balance {
   margin-left: 10px;
+}
+#select {
+  background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+  height: 29px;
+  overflow: hidden;
+  width: 240px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background-color: var(--color-3);
+
+  width: 350px;
+  color: var(--color-5);
+  margin-bottom: -15px;
+}
+#summary {
+  display: flex;
+  flex-direction: column;
+  color: var(--color-5);
+  text-align: right;
 }
