--- a/app/CSS/animations/animate.css
+++ b/app/CSS/animations/animate.css
@@ -1376,6 +1376,7 @@
 .fadeIn {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
+  -webkit-animation-duration: 1s;
 }
 
 @-webkit-keyframes fadeInDown {
