--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -142,3 +142,10 @@ body {
 ::-webkit-scrollbar-corner {
   background: rgba(0, 0, 0, 0.5);
 }
+
+/* Header Image */
+.hdr-img {
+  height: 35px;
+  width: 35px;
+  padding-right: 20px;
+}
