time for polish
Former-commit-id: 68cb20e623a1c2cfb59ef8e1c6ef21c416766f9f

--- a/app/components/Exchange/style.css
+++ b/app/components/Exchange/style.css
@@ -94,3 +94,11 @@ select.soflow-color {
   /* border-radius: 20px; */
   padding-left: 15px;
 }
+
+#Exchange-container h2 {
+  margin-bottom: 0;
+}
+
+#Exchange-container p {
+  margin-top: 0;
+}
