--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -98,43 +98,47 @@ form {
   visibility: hidden;
 }
 #settings input[type="file"]::before {
-  content: 'Select a wallpaper';
+  content: "Select a wallpaper";
 
   display: inline-block;
-	position: relative;
+  position: relative;
   margin: 0;
-	padding: .4375em 1.25em;
-	vertical-align: middle;
-	line-height: var(--line-height);
+  padding: 0.4375em 1.25em;
+  vertical-align: middle;
+  line-height: var(--line-height);
 
-	outline: 0;
-	border: var(--button-border);
-	border-radius: var(--button-border-radius);
+  outline: 0;
+  border: var(--button-border);
+  border-radius: var(--button-border-radius);
 
-	background: var(--button-background);
-	box-shadow: var(--button-box-shadow);
-	text-shadow: var(--button-text-shadow);
+  background: var(--button-background);
+  box-shadow: var(--button-box-shadow);
+  text-shadow: var(--button-text-shadow);
 
-	color: var(--button-color);
+  color: var(--button-color);
 
-	font-size: inherit;
-	font-family: inherit;
-	text-decoration: none;
-	white-space: nowrap;
-	user-select: none;
+  font-size: inherit;
+  font-family: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  user-select: none;
 
-	cursor: pointer;
-	
-	transition: all .1s ease;
+  cursor: pointer;
+
+  transition: all 0.1s ease;
 }
 #settings input[type="file"]:hover::before {
   color: var(--button-hover-color);
-	border: var(--button-hover-border);
-	background: var(--button-hover-background);
-	text-decoration: none;
-	transform: var(--button-hover-transform);
-	box-shadow: var(--button-hover-box-shadow);
+  border: var(--button-hover-border);
+  background: var(--button-hover-background);
+  text-decoration: none;
+  transform: var(--button-hover-transform);
+  box-shadow: var(--button-hover-box-shadow);
 }
 #settings input[type="file"]:active {
   outline: 0;
+}
+
+#noPad {
+  margin-left: 0;
 }
