--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -34,7 +34,7 @@
 @import "../components/Transactions/style.css";
 @import "../components/Exchange/style.css";
 @import "../components/Loader/style.css";
-
+@import "../../node_modules/react-activity/lib/Squares/Squares.css";
 :root {
   /* COLOR PALETTE VARIABLES */
   --color-1: #111111; /* <-- Dark Grey */
