--- a/app/components/Footer/style.css
+++ b/app/components/Footer/style.css
@@ -57,7 +57,7 @@
 }
 
 #navigation a.active::before {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 20px;
@@ -71,7 +71,7 @@
 }
 
 #navigation a.active::after {
-  content: '';
+  content: "";
   height: 6px;
   width: 6px;
   background-color: var(--color-5);
@@ -80,27 +80,28 @@
   left: 45%;
   border-radius: 50%;
   transform: translateX(-45%);
-  animation: pulse-dot 2s cubic-bezier(0.455, 0.03, 0.515, 0.955) -.4s infinite;
+  animation: pulse-dot 2s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
 }
 
 @keyframes pulse-ring {
   0% {
-    transform: scale(.33);
+    transform: scale(0.33);
   }
-  80%, 100% {
+  80%,
+  100% {
     opacity: 0;
   }
 }
 
 @keyframes pulse-dot {
   0% {
-    transform: scale(.8);
+    transform: scale(0.8);
   }
   50% {
     transform: scale(1);
   }
   100% {
-    transform: scale(.8);
+    transform: scale(0.8);
   }
 }
 
@@ -110,13 +111,13 @@
 
 #navigation a img {
   display: block;
-  margin: .625em;
+  margin: 0.625em;
   filter: grayscale(0);
   width: 40px;
 }
 
 #navigation a:hover img {
   display: block;
-  margin: .625em;
+  margin: 0.625em;
   filter: grayscale(1) brightness(200%);
 }
