--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -98,43 +98,71 @@ form {
   visibility: hidden;
 }
 #settings input[type="file"]::before {
-  content: 'Select a wallpaper';
+  content: "Select a wallpaper";
 
   display: inline-block;
-	position: relative;
+  position: relative;
   margin: 0;
-	padding: .4375em 1.25em;
-	vertical-align: middle;
-	line-height: var(--line-height);
+  padding: 0.4375em 1.25em;
+  vertical-align: middle;
+  line-height: var(--line-height);
 
-	outline: 0;
-	border: var(--button-border);
-	border-radius: var(--button-border-radius);
+  outline: 0;
+  border: var(--button-border);
+  border-radius: var(--button-border-radius);
 
-	background: var(--button-background);
-	box-shadow: var(--button-box-shadow);
-	text-shadow: var(--button-text-shadow);
+  background: var(--button-background);
+  box-shadow: var(--button-box-shadow);
+  text-shadow: var(--button-text-shadow);
 
-	color: var(--button-color);
+  color: var(--button-color);
 
-	font-size: inherit;
-	font-family: inherit;
-	text-decoration: none;
-	white-space: nowrap;
-	user-select: none;
+  font-size: inherit;
+  font-family: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  user-select: none;
 
-	cursor: pointer;
-	
-	transition: all .1s ease;
+  cursor: pointer;
+
+  transition: all 0.1s ease;
 }
 #settings input[type="file"]:hover::before {
   color: var(--button-hover-color);
-	border: var(--button-hover-border);
-	background: var(--button-hover-background);
-	text-decoration: none;
-	transform: var(--button-hover-transform);
-	box-shadow: var(--button-hover-box-shadow);
+  border: var(--button-hover-border);
+  background: var(--button-hover-background);
+  text-decoration: none;
+  transform: var(--button-hover-transform);
+  box-shadow: var(--button-hover-box-shadow);
 }
 #settings input[type="file"]:active {
   outline: 0;
+}
+input[type="number"] {
+  width: 70px;
+  height: 27px;
+}
+
+.fee {
+  /* This bit sets up the horizontal layout */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: inherit;
+  /* This bit draws the box around it */
+}
+
+.Txfee {
+  display: flex;
+  /* Tell the input to use all the available space */
+  flex-grow: 2;
+  /* And hide the input's outline, so the form looks like the outline */
+  border: 1px;
+}
+
+.feebutton {
+  /* Just a little styling to make it pretty */
+  border: 1px solid var(--color-4);
+  background: var(--color-4);
+  color: white;
+  margin-left: -22%;
 }
