cool commit to get rid of the passwords
Former-commit-id: 118154dcb4242b621b1262b57700f7d9fb619031

--- a/app/components/Addressbook/style.css
+++ b/app/components/Addressbook/style.css
@@ -164,3 +164,11 @@ select {
   display: grid;
   grid-template-columns: auto auto;
 }
+
+.myAddress {
+  margin-left: 20px;
+}
+
+#picUploader {
+  display: none;
+}
