cool notes editing done ish
Former-commit-id: 6f69d156e91dcef8209e75b3d75d174f88917ee2

--- a/app/components/Addressbook/style.css
+++ b/app/components/Addressbook/style.css
@@ -28,10 +28,17 @@
 #contactDetailContainer {
   flex: 2;
   margin-left: 20px;
+  align-items: center;
 }
 
 #contactList {
   flex: 1;
+}
+
+#buttonholder {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
 }
 
 #contactDetails {
