cool edit in place almost done
Former-commit-id: 58c07927baf9c11c203f81b0fe75a33338680802

--- a/app/components/Addressbook/style.css
+++ b/app/components/Addressbook/style.css
@@ -168,10 +168,15 @@ select {
 }
 
 #addressDisplay {
-  display: grid;
-  grid-template-columns: auto auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  overflow: auto;
+  justify-content: space-between;
 }
-
+/* #myAddresses {
+  margin-left: 40px;
+} */
 .myAddress {
   margin-left: 20px;
 }
