--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -38,6 +38,8 @@
   /* COLOR PALETTE VARIABLES */
   --color-1: #111111; /* <-- Dark Grey */
   --color-2: #0ca4fb; /* <-- Nexus Blue */
+  --color-3: #556070; /* <-- Light Grey */
+  --color-4: #34495e; /* <-- Medium Grey */
   --color-5: #ffffff; /* <-- White */
 
   /* BACKGROUND IMAGE VARIABLES */
@@ -49,7 +51,8 @@
     rgba(17, 17, 17, 0),
     rgba(17, 17, 17, 0)
   );
-  /* --background-main-image:  url("https://images7.alphacoders.com/428/428134.jpg"); <-- Full Screen Background Image for Nexus Earth Theme */
+
+
   --background-main-image: url("../images/background/hero.svg"); /* <-- Full Screen Background Image for Nexus Earth Theme */
 
   /* FONTS */
