Fixed Issues with transaction page, added maxmind copyright, added close on menu.
Former-commit-id: 61051343f8c5b63199abdce5c3e6f60a014a281d

--- a/app/components/Overview/style.css
+++ b/app/components/Overview/style.css
@@ -31,6 +31,14 @@ Table of Contents
   text-shadow: 2px 2px #111111;
 }
 
+.maxmindCopyright {
+  position: absolute;;
+  bottom: 0px;
+  z-index: 1;
+  color:#05a5ff;
+  opacity: 0.4 ;
+}
+
 /*------------------------------------------------------------------
 I. NEXUS EARTH VISUALIZATION
 ------------------------------------------------------------------*/
