--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -39,6 +39,8 @@
   /* COLOR PALETTE VARIABLES */
   --color-1: #111111; /* <-- Dark Grey */
   --color-2: #0ca4fb; /* <-- Nexus Blue */
+  --color-3: #556070; /* <-- Light Grey */
+  --color-4: #34495e; /* <-- Medium Grey */
   --color-5: #ffffff; /* <-- White */
 
   /* BACKGROUND IMAGE VARIABLES */
@@ -142,4 +144,11 @@ body {
 
 ::-webkit-scrollbar-corner {
   background: rgba(0, 0, 0, 0.5);
+}
+
+/* Header Image */
+.hdr-img {
+  height: 35px;
+  width: 35px;
+  padding-right: 20px;
 }
