--- a/app/CSS/base/palette.css
+++ b/app/CSS/base/palette.css
@@ -6,9 +6,9 @@ Grid
 /* Default Settings */
 
 :root {
-	--color-1: #111;
-	--color-2: #0ca4fb;
-	--color-3: #131722;
-	--color-4: #0ca4fb;
-	--color-5: #fff;
+	--color-1: #111111; /* <-- Dark Grey */
+	--color-2: #0ca4fb; /* <-- Nexus Blue */
+	--color-3: #556070; /* <-- Light Grey */
+	--color-4: #34495e; /* <-- Medium Grey */
+	--color-5: #ffffff; /* <-- White */
 }
