Transaction Pagiantion Next+ Previous btn colors
Former-commit-id: 75682acfb6099e8d3bda78fa23829f1776c79465

--- a/app/CSS/controls/react-table.css
+++ b/app/CSS/controls/react-table.css
@@ -353,7 +353,7 @@
   border-radius: 3px;
   padding: 6px;
   font-size: 1em;
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--color-5);
   background: rgba(0, 0, 0, 0.1);
   transition: all 0.1s ease;
   cursor: pointer;
