--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -180,3 +180,54 @@
     top: 0px;
   }
 }
+
+.Addresslookup {
+  float: right;
+}
+.lookupButton:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.lookupButton {
+  margin-left: 8px;
+  color: var(--color-5);
+  background-color: transparent;
+  height: 30px;
+  width: 30px;
+  border-color: var(--color-2);
+  border-radius: 100px;
+}
+/* AddressModal */
+.custom-overlay3 {
+  padding: 0px;
+}
+.custom-modal3 {
+  background: #282828;
+  /* animation: mymove2 0.5s ease-in-out; */
+  height: 500px;
+
+  width: 700px;
+  max-width: 100%;
+}
+.addressModalHeader {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+#addressPopulateButton:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+#addressPopulateButton {
+  padding-right: 0px;
+
+  border-radius: 10px;
+  height: 20px;
+}
+
+#AddressBookSelect:hover {
+  color: var(--color-2);
+}
+
+#AddressCancel {
+  float: right;
+}
