lato font change
Former-commit-id: a0bec8ce04199d03c700fb811b3be72b0e562f67

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Lato");
 
 @import "./animations/animate.css";
 
@@ -57,7 +57,7 @@
   --background-main-image: url("../images/background/hero.svg"); /* <-- Full Screen Background Image for Nexus Earth Theme */
 
   /* FONTS */
-  --font-1: "Myriad Pro"; /* <-- Sourced Above in First @font-face*/
+  --font-1: "Lato"; /* <-- Sourced Above in First @font-face*/
   --font-2: "Franklin Gothic"; /* <-- Sourced Above in Second @font-face */
 }
 
