--- a/app/CSS/base/text.css
+++ b/app/CSS/base/text.css
@@ -13,41 +13,41 @@ Text
 
 	--body-font-size: 1;
 	--body-font-color: #fff;
-	--body-font-family: 'Roboto', sans-serif;;
+	--body-font-family: 'Lato', sans-serif;;
 	--body-font-weight: normal;
 	
 	--header-font-color: inherit;
-	--header-font-family: 'Roboto', sans-serif;;
+	--header-font-family: 'Lato', sans-serif;;
 	--header-font-weight: bold;
 	
 	--h1-font-size: 3; /*3.4375;*/
 	--h1-font-color: #fff;
-	--h1-font-family: 'Roboto', sans-serif;;
+	--h1-font-family: 'Lato', sans-serif;;
 	--h1-font-weight: 600;
 	
 	--h2-font-size: 2.25;
 	--h2-font-color: #fff;
-	--h2-font-family: 'Roboto', sans-serif;;
+	--h2-font-family: 'Lato', sans-serif;;
 	--h2-font-weight: 600;
 	
 	--h3-font-size: 1.75;
 	--h3-font-color: #fff;
-	--h3-font-family: 'Roboto', sans-serif;;
+	--h3-font-family: 'Lato', sans-serif;;
 	--h3-font-weight: 600;
 	
 	--h4-font-size: 1.125;
 	--h4-font-color: #fff;
-	--h4-font-family: 'Roboto', sans-serif;;
+	--h4-font-family: 'Lato', sans-serif;;
 	--h4-font-weight: 400;
 	
 	--h5-font-size: 1;
 	--h5-font-color: #fff;
-	--h5-font-family: 'Roboto', sans-serif;;
+	--h5-font-family: 'Lato', sans-serif;;
 	--h5-font-weight: 400;
 	
 	--h6-font-size: 1;
 	--h6-font-color: #fff;
-	--h6-font-family: 'Roboto', sans-serif;;
+	--h6-font-family: 'Lato', sans-serif;;
 	--h6-font-weight: 400;
 	
 	--mono-font-size: 1;
