--- a/app/CSS/style.global.scss
+++ b/app/CSS/style.global.scss
@@ -1,6 +1,6 @@
 @font-face {
-  src: url("./fonts/MyriadPro-Regular.ttf") format("truetype");
-  font-family: "Myriad Pro";
+  src: url("https://fonts.googleapis.com/css?family=Lato");
+  font-family: "Lato", sans-serif;
 }
 
 @font-face {
