--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -54,7 +54,7 @@
   );
 
 
-  --background-main-image: url("../images/background/hero.svg"); /* <-- Full Screen Background Image for Nexus Earth Theme */
+  --background-main-image: url("../images/background/Wallet-Design-Blue-AquaStars2-BG.png"); /* <-- Full Screen Background Image for Nexus Earth Theme */
 
   /* FONTS */
   --font-1: "Lato"; /* <-- Sourced Above in First @font-face*/
@@ -145,6 +145,10 @@ body {
 
 ::-webkit-scrollbar-corner {
   background: rgba(0, 0, 0, 0.5);
+}
+
+svg {
+  fill:currentColor;
 }
 
 /* Header Image */
